Added a view to show a list of all the events that have occured

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="StartButton">Start</string>
     <string name="StopButton">Stop</string>
     <string name="SaveButton">Save Settings</string>
-    
     <string name="interval_prompt">Pick an interval</string>
- 
+    <string name="hello_world">Hello world!</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_activity_notice_list">NoticeListActivity</string>
+
 </resources>
